syntax = "proto3";

package tutorial;

message CameraStatus {
  bool isConnected = 1;
}
